# maya-sawa

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  SYNC_CONTROL.md  chk_db_conns.py  pyproject.toml  setup_database.sql  sync_response.json  test_four_images.py  test_identity_fix.py  test_image_links.py  test_maya_identity.py  test_name_extraction.py  test_not_found_fix.py  test_output.webm  test_power_api.py  test_specific_data_image.py
chroma_db/: chroma.sqlite3
data/chroma/: chroma.sqlite3
docs/: research-zone-ai-auto-update-plan.md  sample.md
ibkr-gateway/: .dockerignore  Dockerfile  README.md
ibkr-gateway/gateway/root/: conf.yaml
ibkr-gateway/k8s/: deployment.yaml
k8s/: cronjob.yaml  deployment.yaml  ffmpeg.sh
maya_sawa/: __init__.py  cli.py  ingest.py  main.py  qa_chat.py
maya_sawa/api/: __init__.py  ai_models.py  articles.py  ask.py  conversations.py  git_commits.py  market.py  otel_usage.py  people.py  proxy.py  qa.py  runpod.py  videos.py  voyeur.py
maya_sawa/core/: __init__.py  chat_history.py  config.py  config_manager.py  connection_pool.py  constants.json  embed.py  errors.py  loader.py  name_adapter.py  name_detector.py  page_analyzer.py  people.py  personality.py  postgres_store.py  profile_manager.py  prompts.json  qa_chain.py  qa_engine.py  rules.json  scheduler.py  security.py
maya_sawa/core/auth/: internal.py  keycloak.py
maya_sawa/core/config/: __init__.py  config.py  config_manager.py
maya_sawa/core/data/: __init__.py  keywords.json  prompts.json
maya_sawa/databases/: __init__.py  article_db.py  conversation_db.py  git_commit_db.py  maya_v2_db.py  paprika_db.py  portfolio_history_db.py  postgres_store.py  qa_vector_db.py
maya_sawa/people/: __init__.py  name_adapter.py  name_detector.py  people.py  personality.py  profile_manager.py
maya_sawa/services/: __init__.py  embedding_service.py  ibkr_market.py  metrics_consumer.py  runpod_cost.py  shioaji_market.py  token_reporter.py
maya_sawa/tasks/: __init__.py  ai_tasks.py  celery_app.py
scripts/: create_git_commits_table.py  debug_sync.py  init_articles.py  monitor_connections.py  populate_test_people.py  stop_sync.py  sync_articles.py  sync_people_weapons.py  test_apis.py  test_maya_profile.py  test_qa_chain.py  test_timed_sync.py
sql/: create_articles_table.sql  create_git_commits_table.sql
tests/: check_env.py  debug_config.py  debug_sync.py  quick_test.py  simple_redis_test.py  test_api_response.py  test_connection_pool.py  test_name_adapter.py  test_profile_manager.py  test_qa_flow.py  test_redis_connection.py  test_security.py  test_shioaji_market.py
(+23 files in other folders)
