[tool.poetry]
name = "maya_sawa"
version = "0.1.0"
description = "A powerful document Q&A system based on FastAPI, LangChain, and ChromaDB"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "maya_sawa"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.9"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
langchain = "0.3.25"
langchain-openai = "0.3.23"
langchain-chroma = "^0.2.4"
langchain-community = "0.3.25"
chromadb = "^1.0.12"
markdown = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"

[tool.poetry.scripts]
start = "maya_sawa.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
